--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# First protocol\n",
-    "_Code written and runs in python 3.11.0. Progresses from top to botttom. Go to bottom and run all for proper use. Modify environment variables and queries as needed._  \n",
+    "_Code written and runs in python 3.11.0. Modify environment variables and queries as needed._  \n",
     "_Markdown cells will highlight functionality of following code cell. Functionality will be derived from the list below with the numbered list being referenced in markdown cells._\n",
     "\n",
     "## Protocol\n",
