--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# First protocol\n",
     "_Code written and runs in python 3.11.0. Modify environment variables and queries as needed._  \n",
-    "_Markdown cells will highlight functionality of following code cell. Functionality will be derived from the list below with the numbered list being referenced in markdown cells._\n",
+    "_Please use venv_\n",
     "\n",
     "## Protocol\n",
     "· Start with keywords:\n",
