--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -332,7 +332,7 @@
     "\n",
     "    for w in sorted_keys:\n",
     "        sorted_dict[w] = tweet_metrics_dict[w]\n",
-    "    return sorted_dict"
+    "    return sorted_dict\n"
    ]
   },
   {
