--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -62,7 +62,17 @@
     "  \n",
     "\n",
     "--------------------  \n",
-    "create a files <data.json> in the same folder as this jupyter notebook"
+    "\n",
+    "Crypto packages/api's:\n",
+    "https://medium.com/codex/10-best-resources-to-fetch-cryptocurrency-data-in-python-8400cf0d0136\n",
+    "\n",
+    "https://www.alphavantage.co/documentation/\n",
+    "\n",
+    "\n",
+    "Financial tools/packages:\n",
+    "https://twitter.com/pyquantnews/status/1568029967052640256?t=EthvrNWmYhAFDVOhRoDxrQ&s=03\n",
+    "\n",
+    "https://pmorissette.github.io/ffn/quick.html#data-retrieval"
    ]
   },
   {
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
