--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,10 @@
     "    else:\n",
     "        year = datetime.datetime.now().year - 1\n",
     "    if month == datetime.datetime.now().month:\n",
-    "        day = random.randint(1, datetime.datetime.now().day - 1)\n",
+    "        if datetime.datetime.now().day <= 2:\n",
+    "            day = 1\n",
+    "        else:\n",
+    "            day = random.randint(1, datetime.datetime.now().day - 1)\n",
     "    elif month == 2:\n",
     "        if is_leap_year(year):\n",
     "            day = random.randint(1, 29)\n",
@@ -227,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +251,7 @@
     "\n",
     "    json_obj_by_time_range: dict[str, dict] = dict() # creates a dictionary to which the time range will be created as a key and can therefore be found while in the json file\n",
     "    max_results: int = 500 # this is the max results per request the twitter API allows and should be left at 500\n",
+    "    total_tweets_for_func_call: int = 0\n",
     "\n",
     "    # Loops through the time ranges in a list\n",
     "    for i in range(0, len(start_times_list)):\n",
@@ -259,11 +263,12 @@
     "        json_obj_response = connect_to_endpoint(url[0], headers, url[1], next_token) # prints response code\n",
     "        print(f\"Outer for loop enpoint called for list index {i} / {len(start_times_list) - 1}\") # for quality control\n",
     "        json_obj_response.pop('includes', None) # removes 'includes' key which is a negative externality of calling 'referenced_tweets.id.author_id' expansion\n",
-    "        json_obj_response['time'] = (f\"{start_times_list[i]} --- {end_times_list[i]}\") # adds a 'time' key to the json_obj_response so that the time range of all tweets can be found by calling json_object_response['time']\n",
+    "        json_obj_response['time'] = [start_times_list[i], end_times_list[i]] # adds a 'time' key to the json_obj_response so that the time range of all tweets can be found by calling json_object_response['time']\n",
     "\n",
     "        # Appends the json object API response to the json_obj_by_time_range dictionary\n",
     "        json_obj_by_time_range[f'time_range_{i}'] = json_obj_response\n",
     "        total_count += json_obj_response['meta']['result_count'] # increases the total count counter by the results count in the first API 'GET'\n",
+    "        print(f\"endpoint called and data collected: {total_count} / {results_per_range} tweets in this range scraped\")\n",
     "        time.sleep(5) # time.sleep implementations are seen throughout the code to avoid hitting rate limits of twitter API\n",
     "        \n",
     "        # If there were insifficient results from first 'GET' request to meet the results per range value then the API begins to paginate to scrape more resutls\n",
@@ -280,7 +285,6 @@
     "                next_token = None # ensures next token does not get passed into another function call \n",
     "\n",
     "                if 'data' in json_obj_response:\n",
-    "\n",
     "                    # Loops through dictionaries in json_obj_response and appends them to the main json file\n",
     "                    # This is done because while theoretically the entire item count be appended at once, certain python vectorizing methods might cause disagreeable types. Looping through items avoids this happening\n",
     "                    for item in json_obj_response['data']:\n",
@@ -289,10 +293,17 @@
     "                    total_count += json_obj_response['meta']['result_count'] # increments the result count to match the total results currently aquired\n",
     "                    json_obj_by_time_range[f'time_range_{i}']['meta']['result_count'] = total_count # changes the result count 'key' to meet the result count of all data\n",
     "\n",
+    "                    if json_obj_by_time_range['meta']['result_count'] > 10000:\n",
+    "                        del json_obj_by_time_range[f'time_range_{i}']['data'][10000:]\n",
+    "                        json_obj_by_time_range[f'time_range_{i}']['meta']['result_count'] = len(json_obj_by_time_range[f'time_range_{i}']['data'])\n",
+    "\n",
     "                    print(f\"data key found and data appended: {total_count} / {results_per_range} tweets in this range scraped\") # quality control\n",
+    "                    print(f\"list index {i} / {(len(start_times_list) - 1)}\")\n",
     "\n",
     "                else:\n",
     "                    print(\"empty next token\") # quality control\n",
+    "                    print(f\"max results scraped: {total_count} / {results_per_range} tweets in this range scraped\") # quality control\n",
+    "                    print(f\"list index {i} / {(len(start_times_list) - 1)} scraping over. Total tweets will be less than desired\")\n",
     "            \n",
     "            else:\n",
     "                print(\"No more tweets to scrape, total tweets will be less than amount desired.\") # quality control\n",
@@ -300,9 +311,13 @@
     "                next_token = None # ensures next token does not get passed into another function call\n",
     "                break # exits while loop and calls for the next time range or terminates entire process\n",
     "            \n",
+    "\n",
     "            time.sleep(5) # for rate limit \n",
+    "        total_tweets_for_func_call += len(json_obj_by_time_range[f'time_range_{i}']['data'])\n",
+    "        print(f\"{total_tweets_for_func_call} tweets scraped in entire function call\")\n",
     "        time.sleep(5) # for rate limit\n",
     "\n",
+    "            \n",
     "        json_to_file = json.dumps(json_obj_by_time_range) # converts results from above code to a serialized json obj\n",
     "        # Creates json file in directory of program and writes serialized json obj to the newly made file\n",
     "        with open(f\"data_range_{i}.json\", \"w\") as outfile:\n",
@@ -342,6 +357,15 @@
     "    for w in sorted_keys:\n",
     "        sorted_dict[w] = tweet_metrics_dict[w] # sorts the dictionary by value from greates to least\n",
     "    return sorted_dict # returns sorted dict\n",
+    "\n",
+    "\n",
+    "def return_stats_of_file(num_of_file: int):\n",
+    "    f = open(f'data_range_{num_of_file}.json')\n",
+    "    data_file = json.load(f)\n",
+    "    print(f\"There are {len(data_file[f'time_range_{num_of_file}']['data'])} tweets in this data file\")\n",
+    "    print(data_file[f'time_range_{num_of_file}']['meta'])\n",
+    "    print(data_file[f'time_range_{num_of_file}']['time'])\n",
+    "    f.close()\n",
     "\n",
     "\n",
     "def analyze_top_retweeted_tweets_in_data(max_int_of_json: int) -> dict: # max_int_of_json is the max int of json files in your directory, this function will paginate through them\n",
@@ -385,11 +409,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2022-03-05T11:00:00Z', '2022-03-09T16:00:00Z', '2022-03-10T13:00:00Z', '2022-03-12T04:00:00Z', '2022-03-12T13:00:00Z', '2022-03-21T09:00:00Z', '2022-03-24T12:00:00Z', '2022-04-02T06:00:00Z', '2022-04-05T17:00:00Z', '2022-04-05T22:00:00Z', '2022-04-09T03:00:00Z', '2022-04-11T02:00:00Z', '2022-04-13T21:00:00Z', '2022-04-14T18:00:00Z', '2022-05-14T18:00:00Z', '2022-05-19T10:00:00Z', '2022-05-23T06:00:00Z', '2022-06-03T22:00:00Z', '2022-06-05T06:00:00Z', '2022-06-07T10:00:00Z', '2022-06-09T00:00:00Z', '2022-06-17T16:00:00Z', '2022-06-19T23:00:00Z', '2022-06-28T15:00:00Z', '2022-06-30T00:00:00Z', '2022-07-01T18:00:00Z', '2022-07-08T14:00:00Z', '2022-07-11T13:00:00Z', '2022-07-15T18:00:00Z', '2022-07-17T20:00:00Z', '2022-07-21T12:00:00Z', '2022-07-26T18:00:00Z', '2022-07-28T00:00:00Z', '2022-07-30T21:00:00Z', '2022-08-01T13:00:00Z', '2022-08-01T20:00:00Z', '2022-08-07T14:00:00Z', '2022-08-12T21:00:00Z', '2022-08-22T06:00:00Z', '2022-08-22T18:00:00Z', '2022-08-22T22:00:00Z', '2022-08-23T09:00:00Z', '2022-08-23T19:00:00Z', '2022-08-24T01:00:00Z', '2022-08-24T09:00:00Z', '2022-08-27T11:00:00Z', '2022-09-04T11:00:00Z', '2022-09-04T20:00:00Z', '2022-09-09T18:00:00Z', '2022-09-09T21:00:00Z', '2022-09-11T16:00:00Z', '2022-09-12T00:00:00Z', '2022-09-12T14:00:00Z', '2022-09-13T09:00:00Z', '2022-09-13T17:00:00Z', '2022-09-16T00:00:00Z', '2022-09-20T19:00:00Z', '2022-09-22T23:00:00Z', '2022-09-24T04:00:00Z', '2022-09-26T16:00:00Z', '2022-09-29T14:00:00Z', '2022-09-30T01:00:00Z', '2022-10-01T15:00:00Z', '2022-10-03T07:00:00Z', '2022-10-07T15:00:00Z', '2022-10-08T19:00:00Z', '2022-10-11T03:00:00Z', '2022-10-18T08:00:00Z', '2022-10-20T12:00:00Z', '2022-10-24T14:00:00Z', '2022-11-12T14:00:00Z', '2022-11-13T17:00:00Z', '2022-11-13T21:00:00Z', '2022-11-14T17:00:00Z', '2022-11-14T21:00:00Z', '2022-11-27T14:00:00Z', '2022-11-27T17:00:00Z', '2022-11-28T20:00:00Z', '2022-11-30T18:00:00Z', '2022-12-05T07:00:00Z', '2022-12-05T18:00:00Z', '2022-12-15T04:00:00Z', '2022-12-16T03:00:00Z', '2022-12-28T20:00:00Z', '2023-01-02T07:00:00Z', '2023-01-09T17:00:00Z', '2023-01-10T03:00:00Z', '2023-01-15T00:00:00Z', '2023-01-19T08:00:00Z', '2023-01-19T13:00:00Z', '2023-01-23T00:00:00Z', '2023-01-29T11:00:00Z', '2023-02-01T06:00:00Z', '2023-02-01T11:00:00Z', '2023-02-01T12:00:00Z', '2023-02-01T14:00:00Z', '2023-02-01T17:00:00Z', '2023-02-01T21:00:00Z', '2023-02-01T22:00:00Z', '2023-02-01T23:00:00Z'] --- ['2022-03-05T12:00:00Z', '2022-03-09T17:00:00Z', '2022-03-10T14:00:00Z', '2022-03-12T05:00:00Z', '2022-03-12T14:00:00Z', '2022-03-21T10:00:00Z', '2022-03-24T13:00:00Z', '2022-04-02T07:00:00Z', '2022-04-05T18:00:00Z', '2022-04-05T23:00:00Z', '2022-04-09T04:00:00Z', '2022-04-11T03:00:00Z', '2022-04-13T22:00:00Z', '2022-04-14T19:00:00Z', '2022-05-14T19:00:00Z', '2022-05-19T11:00:00Z', '2022-05-23T07:00:00Z', '2022-06-03T23:00:00Z', '2022-06-05T07:00:00Z', '2022-06-07T11:00:00Z', '2022-06-09T01:00:00Z', '2022-06-17T17:00:00Z', '2022-06-20T00:00:00Z', '2022-06-28T16:00:00Z', '2022-06-30T01:00:00Z', '2022-07-01T19:00:00Z', '2022-07-08T15:00:00Z', '2022-07-11T14:00:00Z', '2022-07-15T19:00:00Z', '2022-07-17T21:00:00Z', '2022-07-21T13:00:00Z', '2022-07-26T19:00:00Z', '2022-07-28T01:00:00Z', '2022-07-30T22:00:00Z', '2022-08-01T14:00:00Z', '2022-08-01T21:00:00Z', '2022-08-07T15:00:00Z', '2022-08-12T22:00:00Z', '2022-08-22T07:00:00Z', '2022-08-22T19:00:00Z', '2022-08-22T23:00:00Z', '2022-08-23T10:00:00Z', '2022-08-23T20:00:00Z', '2022-08-24T02:00:00Z', '2022-08-24T10:00:00Z', '2022-08-27T12:00:00Z', '2022-09-04T12:00:00Z', '2022-09-04T21:00:00Z', '2022-09-09T19:00:00Z', '2022-09-09T22:00:00Z', '2022-09-11T17:00:00Z', '2022-09-12T01:00:00Z', '2022-09-12T15:00:00Z', '2022-09-13T10:00:00Z', '2022-09-13T18:00:00Z', '2022-09-16T01:00:00Z', '2022-09-20T20:00:00Z', '2022-09-23T00:00:00Z', '2022-09-24T05:00:00Z', '2022-09-26T17:00:00Z', '2022-09-29T15:00:00Z', '2022-09-30T02:00:00Z', '2022-10-01T16:00:00Z', '2022-10-03T08:00:00Z', '2022-10-07T16:00:00Z', '2022-10-08T20:00:00Z', '2022-10-11T04:00:00Z', '2022-10-18T09:00:00Z', '2022-10-20T13:00:00Z', '2022-10-24T15:00:00Z', '2022-11-12T15:00:00Z', '2022-11-13T18:00:00Z', '2022-11-13T22:00:00Z', '2022-11-14T18:00:00Z', '2022-11-14T22:00:00Z', '2022-11-27T15:00:00Z', '2022-11-27T18:00:00Z', '2022-11-28T21:00:00Z', '2022-11-30T19:00:00Z', '2022-12-05T08:00:00Z', '2022-12-05T19:00:00Z', '2022-12-15T05:00:00Z', '2022-12-16T04:00:00Z', '2022-12-28T21:00:00Z', '2023-01-02T08:00:00Z', '2023-01-09T18:00:00Z', '2023-01-10T04:00:00Z', '2023-01-15T01:00:00Z', '2023-01-19T09:00:00Z', '2023-01-19T14:00:00Z', '2023-01-23T01:00:00Z', '2023-01-29T12:00:00Z', '2023-02-01T07:00:00Z', '2023-02-01T12:00:00Z', '2023-02-01T13:00:00Z', '2023-02-01T15:00:00Z', '2023-02-01T18:00:00Z', '2023-02-01T22:00:00Z', '2023-02-01T23:00:00Z', '2023-02-02T00:00:00Z']\n",
+      "['2022-03-05T11:00:00Z', '2022-03-09T16:00:00Z', '2022-03-10T13:00:00Z', '2022-03-12T04:00:00Z', '2022-03-12T13:00:00Z', '2022-03-21T09:00:00Z', '2022-03-24T12:00:00Z', '2022-04-02T06:00:00Z', '2022-04-05T17:00:00Z', '2022-04-05T22:00:00Z', '2022-04-09T03:00:00Z', '2022-04-11T02:00:00Z', '2022-04-13T21:00:00Z', '2022-04-14T18:00:00Z', '2022-05-14T18:00:00Z', '2022-05-19T10:00:00Z', '2022-05-23T06:00:00Z', '2022-06-03T22:00:00Z', '2022-06-05T06:00:00Z', '2022-06-07T10:00:00Z', '2022-06-09T00:00:00Z', '2022-06-17T16:00:00Z', '2022-06-19T23:00:00Z', '2022-06-28T15:00:00Z', '2022-06-30T00:00:00Z', '2022-07-01T18:00:00Z', '2022-07-08T14:00:00Z', '2022-07-11T13:00:00Z', '2022-07-15T18:00:00Z', '2022-07-17T20:00:00Z', '2022-07-21T12:00:00Z', '2022-07-26T18:00:00Z', '2022-07-28T00:00:00Z', '2022-07-30T21:00:00Z', '2022-08-01T13:00:00Z', '2022-08-01T20:00:00Z', '2022-08-07T14:00:00Z', '2022-08-12T21:00:00Z', '2022-08-22T06:00:00Z', '2022-08-22T18:00:00Z', '2022-08-22T22:00:00Z', '2022-08-23T09:00:00Z', '2022-08-23T19:00:00Z', '2022-08-24T01:00:00Z', '2022-08-24T09:00:00Z', '2022-08-27T11:00:00Z', '2022-09-04T11:00:00Z', '2022-09-04T20:00:00Z', '2022-09-09T18:00:00Z', '2022-09-09T21:00:00Z', '2022-09-11T16:00:00Z', '2022-09-12T00:00:00Z', '2022-09-12T14:00:00Z', '2022-09-13T09:00:00Z', '2022-09-13T17:00:00Z', '2022-09-16T00:00:00Z', '2022-09-20T19:00:00Z', '2022-09-22T23:00:00Z', '2022-09-24T04:00:00Z', '2022-09-26T16:00:00Z', '2022-09-29T14:00:00Z', '2022-09-30T01:00:00Z', '2022-10-01T15:00:00Z', '2022-10-03T07:00:00Z', '2022-10-07T15:00:00Z', '2022-10-08T19:00:00Z', '2022-10-11T03:00:00Z', '2022-10-18T08:00:00Z', '2022-10-20T12:00:00Z', '2022-10-24T14:00:00Z', '2022-11-12T14:00:00Z', '2022-11-13T17:00:00Z', '2022-11-13T21:00:00Z', '2022-11-14T17:00:00Z', '2022-11-14T21:00:00Z', '2022-11-27T14:00:00Z', '2022-11-27T17:00:00Z', '2022-11-28T20:00:00Z', '2022-11-30T18:00:00Z', '2022-12-05T07:00:00Z', '2022-12-05T18:00:00Z', '2022-12-15T04:00:00Z', '2022-12-16T03:00:00Z', '2022-12-28T20:00:00Z', '2023-01-02T07:00:00Z', '2023-01-09T17:00:00Z', '2023-01-10T03:00:00Z', '2023-01-15T00:00:00Z', '2023-01-19T08:00:00Z', '2023-01-19T13:00:00Z', '2023-01-23T00:00:00Z', '2023-01-29T11:00:00Z', '2023-02-01T06:00:00Z', '2023-02-01T11:00:00Z', '2023-02-01T12:00:00Z', '2023-02-01T14:00:00Z', '2023-02-01T17:00:00Z', '2023-02-01T21:00:00Z', '2023-02-01T22:00:00Z', '2023-02-01T23:00:00Z'] --- ['2022-03-05T12:00:00Z', '2022-03-09T17:00:00Z', '2022-03-10T14:00:00Z', '2022-03-12T05:00:00Z', '2022-03-12T14:00:00Z', '2022-03-21T10:00:00Z', '2022-03-24T13:00:00Z', '2022-04-02T07:00:00Z', '2022-04-05T18:00:00Z', '2022-04-05T23:00:00Z', '2022-04-09T04:00:00Z', '2022-04-11T03:00:00Z', '2022-04-13T22:00:00Z', '2022-04-14T19:00:00Z', '2022-05-14T19:00:00Z', '2022-05-19T11:00:00Z', '2022-05-23T07:00:00Z', '2022-06-03T23:00:00Z', '2022-06-05T07:00:00Z', '2022-06-07T11:00:00Z', '2022-06-09T01:00:00Z', '2022-06-17T17:00:00Z', '2022-06-20T00:00:00Z', '2022-06-28T16:00:00Z', '2022-06-30T01:00:00Z', '2022-07-01T19:00:00Z', '2022-07-08T15:00:00Z', '2022-07-11T14:00:00Z', '2022-07-15T19:00:00Z', '2022-07-17T21:00:00Z', '2022-07-21T13:00:00Z', '2022-07-26T19:00:00Z', '2022-07-28T01:00:00Z', '2022-07-30T22:00:00Z', '2022-08-01T14:00:00Z', '2022-08-01T21:00:00Z', '2022-08-07T15:00:00Z', '2022-08-12T22:00:00Z', '2022-08-22T07:00:00Z', '2022-08-22T19:00:00Z', '2022-08-22T23:00:00Z', '2022-08-23T10:00:00Z', '2022-08-23T20:00:00Z', '2022-08-24T02:00:00Z', '2022-08-24T10:00:00Z', '2022-08-27T12:00:00Z', '2022-09-04T12:00:00Z', '2022-09-04T21:00:00Z', '2022-09-09T19:00:00Z', '2022-09-09T22:00:00Z', '2022-09-11T17:00:00Z', '2022-09-12T01:00:00Z', '2022-09-12T15:00:00Z', '2022-09-13T10:00:00Z', '2022-09-13T18:00:00Z', '2022-09-16T01:00:00Z', '2022-09-20T20:00:00Z', '2022-09-23T00:00:00Z', '2022-09-24T05:00:00Z', '2022-09-26T17:00:00Z', '2022-09-29T15:00:00Z', '2022-09-30T02:00:00Z', '2022-10-01T16:00:00Z', '2022-10-03T08:00:00Z', '2022-10-07T16:00:00Z', '2022-10-08T20:00:00Z', '2022-10-11T04:00:00Z', '2022-10-18T09:00:00Z', '2022-10-20T13:00:00Z', '2022-10-24T15:00:00Z', '2022-11-12T15:00:00Z', '2022-11-13T18:00:00Z', '2022-11-13T22:00:00Z', '2022-11-14T18:00:00Z', '2022-11-14T22:00:00Z', '2022-11-27T15:00:00Z', '2022-11-27T18:00:00Z', '2022-11-28T21:00:00Z', '2022-11-30T19:00:00Z', '2022-12-05T08:00:00Z', '2022-12-05T19:00:00Z', '2022-12-15T05:00:00Z', '2022-12-16T04:00:00Z', '2022-12-28T21:00:00Z', '2023-01-02T08:00:00Z', '2023-01-09T18:00:00Z', '2023-01-10T04:00:00Z', '2023-01-15T01:00:00Z', '2023-01-19T09:00:00Z', '2023-01-19T14:00:00Z', '2023-01-23T01:00:00Z', '2023-01-29T12:00:00Z', '2023-02-01T07:00:00Z', '2023-02-01T12:00:00Z', '2023-02-01T13:00:00Z', '2023-02-01T15:00:00Z', '2023-02-01T18:00:00Z', '2023-02-01T22:00:00Z', '2023-02-01T23:00:00Z', '2023-02-02T00:00:00Z']\n"
+     ]
+    }
+   ],
    "source": [
-    "start_list, end_list = return_n_random_hour_ranges_sorted(100)"
+    "start_list, end_list = return_n_random_hour_ranges_sorted(100)\n",
+    "for time in start_list, end_list:\n",
+    "    print(f\"{start_list} --- {end_list}\")"
    ]
   },
   {
@@ -405,13 +440,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of data:\n",
+      "10000\n",
+      "answer in meta:\n",
+      "10000\n"
+     ]
+    }
+   ],
    "source": [
-    "dict_test = analyze_top_retweeted_tweets_in_data(100)\n",
-    "first_val = list(dict_test.values())[0:20]\n",
-    "print(first_val)"
+    "import json\n",
+    "num_of_file = 0\n",
+    "f = open(f'data_range_{num_of_file}.json')\n",
+    "data_file = json.load(f)\n",
+    "del data_file[f'time_range_{num_of_file}']['data'][10000:]\n",
+    "data_file[f'time_range_{num_of_file}']['meta']['result_count'] = len(data_file[f'time_range_{num_of_file}']['data'])\n",
+    "print(\"length of data:\")\n",
+    "print(len(data_file[f'time_range_{num_of_file}']['data']))\n",
+    "print(\"answer in meta:\")\n",
+    "print(data_file[f'time_range_{num_of_file}']['meta']['result_count'])\n",
+    "f.close()"
    ]
   }
  ],
