--- a/tweets.ipynb
+++ b/tweets.ipynb
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1260,377 +1260,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "75\n",
-      "62\n",
-      "52\n",
-      "60\n",
-      "56\n",
-      "101\n",
-      "50\n",
-      "111\n",
-      "73\n",
-      "97\n",
-      "89\n",
-      "75\n",
-      "88\n",
-      "56\n",
-      "73\n",
-      "67\n",
-      "94\n",
-      "63\n",
-      "63\n",
-      "68\n",
-      "73\n",
-      "88\n",
-      "122\n",
-      "142\n",
-      "105\n",
-      "105\n",
-      "127\n",
-      "115\n",
-      "98\n",
-      "122\n",
-      "167\n",
-      "169\n",
-      "152\n",
-      "156\n",
-      "153\n",
-      "158\n",
-      "161\n",
-      "158\n",
-      "129\n",
-      "148\n",
-      "157\n",
-      "174\n",
-      "180\n",
-      "184\n",
-      "221\n",
-      "170\n",
-      "175\n",
-      "223\n",
-      "202\n",
-      "247\n",
-      "219\n",
-      "237\n",
-      "308\n",
-      "334\n",
-      "268\n",
-      "290\n",
-      "247\n",
-      "303\n",
-      "320\n",
-      "330\n",
-      "310\n",
-      "244\n",
-      "242\n",
-      "244\n",
-      "236\n",
-      "208\n",
-      "230\n",
-      "181\n",
-      "204\n",
-      "195\n",
-      "237\n",
-      "219\n",
-      "251\n",
-      "279\n",
-      "201\n",
-      "199\n",
-      "190\n",
-      "191\n",
-      "162\n",
-      "160\n",
-      "181\n",
-      "143\n",
-      "200\n",
-      "205\n",
-      "188\n",
-      "176\n",
-      "216\n",
-      "188\n",
-      "178\n",
-      "167\n",
-      "200\n",
-      "179\n",
-      "192\n",
-      "211\n",
-      "206\n",
-      "159\n",
-      "164\n",
-      "142\n",
-      "177\n",
-      "200\n",
-      "106\n",
-      "120\n",
-      "157\n",
-      "118\n",
-      "116\n",
-      "115\n",
-      "125\n",
-      "125\n",
-      "123\n",
-      "128\n",
-      "145\n",
-      "129\n",
-      "126\n",
-      "105\n",
-      "116\n",
-      "131\n",
-      "118\n",
-      "106\n",
-      "96\n",
-      "74\n",
-      "72\n",
-      "109\n",
-      "81\n",
-      "99\n",
-      "76\n",
-      "58\n",
-      "53\n",
-      "47\n",
-      "48\n",
-      "67\n",
-      "46\n",
-      "44\n",
-      "33\n",
-      "34\n",
-      "37\n",
-      "50\n",
-      "54\n",
-      "68\n",
-      "72\n",
-      "33\n",
-      "22\n",
-      "40\n",
-      "32\n",
-      "27\n",
-      "22\n",
-      "23\n",
-      "42\n",
-      "38\n",
-      "17\n",
-      "27\n",
-      "21\n",
-      "47\n",
-      "12\n",
-      "41\n",
-      "21\n",
-      "26\n",
-      "33\n",
-      "25\n",
-      "30\n",
-      "18\n",
-      "10\n",
-      "9\n",
-      "44\n",
-      "25\n",
-      "43\n",
-      "22\n",
-      "39\n",
-      "23\n",
-      "27\n",
-      "16\n",
-      "15\n",
-      "15\n",
-      "26\n",
-      "31\n",
-      "35\n",
-      "25\n",
-      "16\n",
-      "38\n",
-      "21\n",
-      "34\n",
-      "15\n",
-      "22\n",
-      "51\n",
-      "74\n",
-      "59\n",
-      "37\n",
-      "41\n",
-      "34\n",
-      "52\n",
-      "40\n",
-      "17\n",
-      "22\n",
-      "29\n",
-      "30\n",
-      "33\n",
-      "25\n",
-      "14\n",
-      "21\n",
-      "13\n",
-      "9\n",
-      "39\n",
-      "16\n",
-      "16\n",
-      "24\n",
-      "16\n",
-      "16\n",
-      "11\n",
-      "18\n",
-      "22\n",
-      "37\n",
-      "124\n",
-      "92\n",
-      "88\n",
-      "94\n",
-      "65\n",
-      "17\n",
-      "24\n",
-      "23\n",
-      "76\n",
-      "37\n",
-      "10\n",
-      "27\n",
-      "33\n",
-      "17\n",
-      "21\n",
-      "30\n",
-      "50\n",
-      "34\n",
-      "31\n",
-      "17\n",
-      "19\n",
-      "56\n",
-      "53\n",
-      "40\n",
-      "36\n",
-      "25\n",
-      "12\n",
-      "15\n",
-      "23\n",
-      "26\n",
-      "23\n",
-      "20\n",
-      "20\n",
-      "14\n",
-      "73\n",
-      "108\n",
-      "67\n",
-      "36\n",
-      "47\n",
-      "16\n",
-      "19\n",
-      "53\n",
-      "32\n",
-      "84\n",
-      "36\n",
-      "24\n",
-      "20\n",
-      "46\n",
-      "15\n",
-      "32\n",
-      "30\n",
-      "32\n",
-      "17\n",
-      "29\n",
-      "15\n",
-      "23\n",
-      "30\n",
-      "14\n",
-      "124\n",
-      "42\n",
-      "25\n",
-      "28\n",
-      "39\n",
-      "31\n",
-      "24\n",
-      "55\n",
-      "99\n",
-      "41\n",
-      "57\n",
-      "36\n",
-      "89\n",
-      "83\n",
-      "34\n",
-      "23\n",
-      "39\n",
-      "25\n",
-      "35\n",
-      "27\n",
-      "21\n",
-      "30\n",
-      "48\n",
-      "17\n",
-      "31\n",
-      "44\n",
-      "80\n",
-      "45\n",
-      "23\n",
-      "22\n",
-      "50\n",
-      "48\n",
-      "26\n",
-      "50\n",
-      "41\n",
-      "57\n",
-      "50\n",
-      "45\n",
-      "44\n",
-      "39\n",
-      "75\n",
-      "43\n",
-      "66\n",
-      "76\n",
-      "26\n",
-      "24\n",
-      "30\n",
-      "23\n",
-      "51\n",
-      "33\n",
-      "22\n",
-      "20\n",
-      "22\n",
-      "29\n",
-      "11\n",
-      "108\n",
-      "27\n",
-      "44\n",
-      "18\n",
-      "19\n",
-      "32\n",
-      "44\n",
-      "40\n",
-      "20\n",
-      "23\n",
-      "35\n",
-      "30\n",
-      "30\n",
-      "17\n",
-      "33\n",
-      "33\n",
-      "19\n",
-      "24\n",
-      "21\n",
-      "55\n",
-      "25\n",
-      "14\n",
-      "20\n",
-      "24\n",
-      "27\n",
-      "13\n",
-      "26\n",
-      "21\n",
-      "37\n",
-      "27\n",
-      "14\n",
-      "15\n",
-      "24\n",
-      "27\n",
-      "29\n",
-      "117\n",
-      "111\n",
-      "58\n",
-      "17\n",
-      "14\n",
-      "72\n",
-      "31\n"
-     ]
     }
    ],
    "source": [
@@ -1680,8 +1309,8 @@
     "\n",
     "# display the plot\n",
     "plt.show()\n",
-    "for item in mentions_count:\n",
-    "    print(f\"{mentions_count[item][3]}\")"
+    "#for item in mentions_count:\n",
+    " #   print(f\"{mentions_count[item][3]}\")"
    ]
   },
   {
@@ -1725,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1737,377 +1366,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "456\n",
-      "589\n",
-      "501\n",
-      "804\n",
-      "1017\n",
-      "1085\n",
-      "1355\n",
-      "1903\n",
-      "1996\n",
-      "1498\n",
-      "1576\n",
-      "1242\n",
-      "1313\n",
-      "1253\n",
-      "994\n",
-      "890\n",
-      "798\n",
-      "569\n",
-      "338\n",
-      "348\n",
-      "208\n",
-      "203\n",
-      "163\n",
-      "205\n",
-      "165\n",
-      "171\n",
-      "348\n",
-      "196\n",
-      "128\n",
-      "144\n",
-      "504\n",
-      "223\n",
-      "202\n",
-      "237\n",
-      "199\n",
-      "346\n",
-      "257\n",
-      "178\n",
-      "302\n",
-      "343\n",
-      "328\n",
-      "218\n",
-      "294\n",
-      "326\n",
-      "340\n",
-      "200\n",
-      "259\n",
-      "222\n",
-      "202\n",
-      "149\n",
-      "165\n",
-      "418\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
     }
    ],
    "source": [
@@ -2162,8 +1420,8 @@
     "\n",
     "# display the plot\n",
     "plt.show()\n",
-    "for item in mentions_count:\n",
-    "    print(f\"{mentions_count[item][3]}\")\n"
+    "#for item in mentions_count:\n",
+    " #   print(f\"{mentions_count[item][3]}\")\n"
    ]
   },
   {
